Fix Horizontal Scroll2

--- a/assets/styles/05Contact.css
+++ b/assets/styles/05Contact.css
@@ -156,11 +156,14 @@ form {
 
 #media-icons {
 	font-size: 15pt;
+	padding:0;
+	margin:0;
 }
 
 #medialink1,
 #medialink2 {
 	margin:0;
+	padding:0;
 }
 
 
